updated styles, added better messages

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,26 +4,65 @@
   box-sizing: border-box;
 }
 
-body {
-  padding: 20px;
-  
-  background: #f4f4f4;
+body {  
+  background: #fff;
+
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.container {
-  width 100%;
+h1, h2 {
+  margin-bottom: 10px;
+
+  line-height: 1.3em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+.band {
+  padding: 40px 0;
+}
+
+.band--header {
+  background: #1a1a1a;
+}
+
+.band--header > * {
+  color: #fff;
+}
+
+.band--input {
+  background: #e6e6e6;
+}
+
+.band--output {
+  background: #fff;
+}
+
+.wrapper {
+  width: 100%;
   max-width: 500px;
   margin: 0 auto;
 }
 
 .button {
+  width: 100%;
+  max-width: 250px;
   padding: 10px 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   margin-bottom: 20px;
-  display: block;
+  display: inline-block;
   
-  background: #333;
+  background: #c0272d;
   
   color: #fff;
   text-align: center;
@@ -45,14 +84,45 @@ body {
   
   background: #fff;
   
-  fon-size: 16px;
+  font-size: 16px;
 }
 
 .output {
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 4px;
+  margin-top: 30px;
   
-  font-size: 25px;
-  color: #333;
+  background: #e6e6e6;
+}
+
+.output__score,
+.output__face {
+  width: 48%;
+  margin-bottom: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.output__score {
+  padding: 15px;
+  border-radius: 4px;
+
+  font-size: 50px;
+  line-height: 1em;
+
+  background: #fff;
+}
+
+.output__message {
+  width: 100%;
+
+  font-size: 20px;
+}
+
+.output__message--positive {
+  color: #27C069;
+}
+
+.output__message--negative {
+  color: #c0272d;
 }
